--- a/views/project.ejs
+++ b/views/project.ejs
@@ -2,6 +2,12 @@
 <% include  partial/nav.ejs %>
 <div>
 <h1 class="textCenter">project</h1>
-
+<div id="proj1">
+    <!-- <img src="images/pacific.png" alt="" width="370px"> -->
+    <p>Developing a 5 pages business web site for Pacific Trails Resort.<br>
+        Pacific Trails Resort, located right on the California North Coast.<br>
+        The resort offers a quiet getaway with luxury camping in yurts along<br>
+         with upscale lodge for dining and visiting with fellow guests</p>
+</div>
 </div>
 <% include  partial/footer.ejs %>
