--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,3 +58,28 @@ nav li {
   gap: 16px;
   flex-wrap: wrap;
 }*/
+#proj1 {
+  margin-top: 50px;
+  text-align: center;
+}
+
+#proj2 {
+  margin-top: 80px;
+  text-align: center;
+}
+
+#proj3 {
+  margin-top: 80px;
+  text-align: center;
+}
+
+#servPic{
+  margin-top: 80px;
+  margin-left: 30px;
+  text-align: center;
+}
+
+#serv{
+  margin-top: 50px;
+  text-align: center;
+}
