--- a/views/project.ejs
+++ b/views/project.ejs
@@ -3,11 +3,30 @@
 <div>
 <h1 class="textCenter">project</h1>
 <div id="proj1">
-    <!-- <img src="images/pacific.png" alt="" width="370px"> -->
+    <img src="images/pacific.png" alt="" width="370px">
     <p>Developing a 5 pages business web site for Pacific Trails Resort.<br>
         Pacific Trails Resort, located right on the California North Coast.<br>
         The resort offers a quiet getaway with luxury camping in yurts along<br>
          with upscale lodge for dining and visiting with fellow guests</p>
+</div>
+<hr>
+<div id="proj2">
+    
+    <img src="images/validation.png" alt="" width="370px">
+    <p>Developing a validation business form.<br>
+    The form can formats all content accordingly,<br>
+For example, the postal code has to be in the a0a0a0 format,<br>
+the Email field must contain the @ and . characters etc. </p>
+    
+</div>
+<hr>
+<div id="proj3">
+    
+    <img src="images/lianjia.png" alt="" width="370px">
+    <p>Developing a 7 pages business web site for Lian Jia Real Estate Agency.<br>
+    Lian Jia Agency based in ShangHai, it's a big company who help clients to find real estate.<br>
+Through the web site, clients can find their satisfactory real setates.</p>
+    
 </div>
 </div>
 <% include  partial/footer.ejs %>
