--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -1,10 +1,17 @@
 <nav>
-    <img src="images/logo.png" alt="" height="128" width="128">
+    <img src="/images/logo.png" alt="" height="128" width="128">
     <ul class="navbar">
         <li><a href="/" class=<%= title.includes("home") ? "active":"" %>>Home</a></li>
         <li><a href="/about" class=<%= title.includes("about") ? "active":"" %>>About Me</a></li>
         <li><a href="/project" class=<%= title.includes("project") ? "active":"" %>>Project</a></li>
         <li><a href="/services" class=<%= title.includes("service") ? "active":"" %>>Services</a></li>
         <li><a href="/contact" class=<%= title.includes("contact") ? "active":"" %>>Contact Me</a></li>
+        <% if(user) { %>
+            <li><a href="/businessContacts" class=<%= title.includes("businessContacts") ? "active":"" %>>Business Contacts</a></li>
+            <li><a href="/logout" >LogOut</a></li>
+         <% } else {%>   
+            <li><a href="/login" class=<%= title.includes("login") ? "active":"" %>>Login</a></li>
+         <% } %>   
+       
     </ul>
 </nav>
